fixed stupid text alignment of book ranks

--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,11 @@
 .entry:before {
   content: attr(nyt-rank);
   font-family: 'Rozha One', serif;
-  font-size: 3rem;
+  font-size: 2.4rem;
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
   padding: 20px 20px;
   text-align: center;
 /*  -webkit-transform: translate(-100px);
@@ -43,6 +43,7 @@
   background-color: #fff;
 /*  border-radius: 50%;*/
   color: #282c37;
+
   -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.21);
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.21);
 }
@@ -99,6 +100,9 @@
 #masthead img {
   -webkit-transition: 100ms;
   transition: 100ms;
+}
+#book.rank {
+  text-align: center;
 }
 
 @media only screen and (min-width: 800px) {
